Initial commit for main siren classes

--- a/Siren.Json.Core/Siren.Json.Core/Siren.Json.Core.csproj
+++ b/Siren.Json.Core/Siren.Json.Core/Siren.Json.Core.csproj
@@ -39,8 +39,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="HttpMethod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SirenAction.cs" />
+    <Compile Include="SirenEntity.cs" />
+    <Compile Include="SirenEntityLink.cs" />
+    <Compile Include="SirenField.cs" />
+    <Compile Include="SirenFieldType.cs" />
+    <Compile Include="SirenLink.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
